--- a/Css/style.css
+++ b/Css/style.css
@@ -1,11 +1,40 @@
+h1{
+    text-align: center;
+}
 
-.dog-card-container{
+h3{
+    text-align: center;
+    padding: 40px 0;
+    color: red
+}
+
+
+
+.dog-cards-container{
     
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
     flex-flow: row wrap;
+    gap: 40px;
+    
+}
+
+.cat-cards-container{
+    display: flex;
+    justify-content: center;
+    flex-flow: row wrap;
+    gap: 40px;
 }
 
 .card{
     width: 33%;
+}
+
+.img-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+    height: 100%;
+    
 }
